--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .react-resizable {
   max-width: 100%;
+  margin-bottom: 20px;
 }
 
 .react-resizable-handle-se {
@@ -31,7 +32,7 @@ label {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 8px;
+  font-size: 11px;
 }
 
 
@@ -42,13 +43,18 @@ input {
   color: #fff;
   border: 0;
   border-bottom: 1px solid #fff;
+  margin-right: 8px;
+  padding-top: 4px;
 }
 
 textarea {
   text-justify: interword;
-  margin-top: 30px;
+  margin-top: 0px;
   background-color: #021d2f;
   color: #fff;
+  width: 100%;
+  flex-grow: 1;
+  min-width: 70rem;
 }
 
 
@@ -56,4 +62,20 @@ g rect {
   fill: #fff;
   stroke: #000;
   stroke-width: 1.5px;
+}
+
+.formulaOutput {
+  font-size: 16px;
+  font-family: "Roboto", monospace;
+  background-color: #444;
+  padding: 8px;
+}
+
+.outputContainer {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
