--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .react-resizable {
-  max-width: 100%;
+  max-width: auto;
   margin-bottom: 20px;
 }
 
@@ -8,15 +8,15 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 8px;
   background-color: lightblue;
-  max-width: 100vw;
   cursor: row-resize;
 }
 
 .inputs-container {
   /* css that puts child items in a row aligned to the left*/
+  margin-top: 20px;
   padding-left: 12px;
   display: flex;
   flex-direction: row;
@@ -117,4 +117,15 @@ g rect {
   align-items: center;
   margin: 0 auto;
   width: 100%;
+}
+
+.chart-container {
+display: block;
+width: 4000px;
+/* */
+}
+
+.zoom-slider {
+  width: 100%;
+  margin: 0 auto;
 }
