--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,24 @@ body {
 h3 {
     margin-bottom: 8px;
 }
+
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: orange #021d2f;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #021d2f;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: orange;
+    border-radius: 20px;
+    border: 3px solid #021d2f;
+}
