--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
    }
 
 
+   /* scollbar pointer events none */
+
 .react-resizable {
     max-width: auto;
     margin-bottom: 20px;
@@ -80,7 +82,10 @@ body {
   
   }      */
 
-
+/* text {
+  color: red !important;
+  fill: red !important;
+} */
 
 /*   
   .wave-label {
