--- a/src/index.css
+++ b/src/index.css
@@ -140,21 +140,13 @@ body {
     margin: 0 auto;
   }
   
-  .inputs-col {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 100%;
-  }
-  
   .chart-container {
   display: block;
   width: 4000px;
   /* */
   }
   
+  input { min-width: 1px; }
 
   input[type=range] {
     height: 45px;
