--- a/src/index.css
+++ b/src/index.css
@@ -21,16 +21,20 @@ body {
    /* Works on Chrome, Edge, and Safari  */
   *::-webkit-scrollbar {
        width: 12px;
+       cursor: pointer;
    }
    
    *::-webkit-scrollbar-track {
        background: #021d2f;
+       cursor: pointer;
+
    }
    
    *::-webkit-scrollbar-thumb {
        background-color: #FB923C;
-       /* border-radius: 20px; */
+       border-radius: 20px;
        border: 3px solid #021d2f;
+       cursor: pointer;
    }
 
 
